language_map/priv/static/css/main.css
/* ... */
.awesomplete {
  position: absolute!important;
  top: 20px;
  left: 20px;
}

#search {
  box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.4);
}

.map {
  width: 100%;
  height: 100%;
  z-index: 1;
}

.area-name {
  font-weight: bold;
  white-space: pre-wrap;
}

.leaflet-tooltip {
  min-width: 200px;
}

/**
 * MAP LEGEND
 */
.legend {
  background-color: #fff;
  position: absolute;
  right: 10px;
  top: 10px;
  border: 1px solid var(--light-border-color);
  border-radius: var(--border-radius);
  box-shadow: 0px 2px 28px -2px rgba(0,0,0,0.4);
  z-index: 4;
  display: none;
}

.legend__header {
  display: flex;
  border-bottom: 1px solid var(--light-border-color);
  align-items: center;
  justify-content: space-between;
  padding: 1rem 1rem 0.75rem;
}

.legend__close {
  font-size: var(--font-size-large);
  margin-left: 2rem;
  background: #eaeaed;
  padding: 0.7rem 0.3rem 0.45rem;
  border-radius: 1rem;
  line-height: 0;
  cursor: pointer;
}

.legend__title {
  font-size: var(--font-size-normal);
  font-weight: var(--font-weight-normal);
}

.legend__list {
  margin-bottom: 0;
  list-style-type: none;
  padding: 0rem 1rem 1rem;
}

.legend__item {
  font-size: var(--font-size-small);
  padding-bottom: 0.5rem;
  display: flex;
  align-items: center;
}

.legend__item:last-child {
  padding-bottom: 0;
}

.color-box {
  display: inline-block;
  height: 17px;
  width: 17px;
  border: 1px solid white;
  box-shadow: 0 0 0 1px var(--colorbox-border-color);
  border-radius: 1px;
  margin-right: 0.5rem;
}

.legend__toggle-container {
  position: absolute;
  top: 10px;
  right: 10px;
  margin: 0;
  z-index: 4;
}

.legend__toggle-container img {
  width: 1.25rem;
  padding-right: 0.15rem;
  margin-bottom: -5px;
  position: relative;
}

#show_legend {
  display: none;
  box-shadow: 0px 2px 28px -2px rgba(0,0,0,0.4);
}

/**
 * MODAL
 */
.jquery-modal.current {
  z-index: 999;
}

.modal__title {
  padding-bottom: 0.75rem;
  font-weight: var(--font-weight-normal);
  border-bottom: 1px solid var(--light-border-color);
}

.area-name {
  font-weight: bold;
  white-space: pre-wrap;
}

.leaflet-tooltip {
  min-width: 200px;
}

path.leaflet-interactive[fill="none"] {  /* PUMA outlines */
  pointer-events: none !important;
}

.question {
  font-weight: bold;
}

/**
 * SEARCH
 */

#search {
  min-width: 250px;
}

.awesomplete {
  z-index: 5;
  color: #000;
}

.awesomplete mark {
  background: #b3cde3 !important;
}

/**
 * MOBILE STYLES
 */

@media (max-width: 1024px) {
  .header {
    flex-wrap: wrap;
    align-items: center;
  }

  .header__title {
    text-align: center;
  }

  .nav {
    flex: 1 0 100%;
  }

  .nav__list {
    flex-direction: column;
    text-align: center;
  }

  .nav__list-item,
  .nav__list-item:last-child {
    padding: 0.5rem;
  }

  #js-filters {
    top: 0;
    left: 0;
    width: 100%;
    box-sizing: border-box;
    border-top: 1px solid var(--dark-border-color);
    border-radius: 0;
  }

  .legend {
    top: auto;
    right: auto;
    left: 0;
    bottom: 20px;
    width: 100%;
    box-sizing: border-box;
    display: none;
    border-radius: 0;
    z-index: 3;
  }

  .legend__toggle-container {
    top: auto;
    right: auto;
    left: 0;
    bottom: 20px;
    display: block;
  }

  #js-toggle-filter {
    display: block;
    margin-left: auto;
    margin-right: 1.5rem;
    height: 24px;
  }

  #filter-showing {
    display: none;
  }

  #js-toggle-filter.active #filter-showing {
    display: block;
  }

  #js-toggle-filter.active #filter-hidden {
    display: none;
  }

  #js-nav {
    display: none;
  }

  #filter-showing,
  #filter-hidden {
    width: 20px;
    height: 20px;
    margin-bottom: -5px;
  }

  #filter-showing {
    background: url(../img/filter-fill.svg);
  }

  #filter-hidden {
    background: url(../img/filter-empty.svg);
  }

  .sidebar {
    top: 0px;
    position: absolute;
    right: 0px;
    left: 0px;
    background: white;
    z-index: 999;
    box-shadow: -1px 4px 28px 0px rgba(0,0,0,0.25);
  }

  #js-toggle-filter.active #filter-hidden,
  #js-toggle-filter #filter-showing {
    display: none;
  }

  #js-toggle-filter.active #filter-showing,
  #js-toggle-filter #filter-hidden {
    display: block;
  }

  #js-toggle-filter.active #nav-showing {
    display: block;
  }

  #js-toggle-filter.active #nav-hidden {
    display: none;
  }

  #js-toggle-nav {
    display: block;
    width: 25px;
    height: 25px;
  }

  #js-toggle-nav span {
    position: relative;
  }

  #js-toggle-nav span,
  #js-toggle-nav span:before,
  #js-toggle-nav span:after {
    cursor: pointer;
    border-radius: 1px;
    height: 3px;
    width: 25px;
    background: white;
    position: absolute;
    display: block;
    content: '';
  }

  #js-toggle-nav span:before {
    top: -6px;
  }

  #js-toggle-nav span:after {
    bottom: -6px;
  }

  #js-toggle-nav span,
  #js-toggle-nav span:before,
  #js-toggle-nav span:after {
    transition: all 500ms ease-in-out;
  }

  #js-toggle-nav.active span {
    background-color: transparent;
  }

  #js-toggle-nav.active span:before,
  #js-toggle-nav.active span:after {
    top: 0;
  }

  #js-toggle-nav.active span:before {
    transform: rotate(45deg);
  }

  #js-toggle-nav.active span:after {
    transform: rotate(-45deg);
  }

  .nav {
    border-top: 1px solid var(--dark-border-color);
    margin-top: 14px;
    padding-top: 20px;
  }

  .nav__list {
    padding-left: 0;
  }

  .nav__list-item {
    font-size: var(--font-size-large);
    padding-bottom: 1rem;
  }
}

#filters-desc {
  padding: 0.95rem 1rem;
  font-size: 12px;
  background: #000;
  color: #808080;
  display: none;
}

#filters-desc .filter-val {
  color: #fff;
}
/* ... */

